* Define the flags for each flavor (shared, static, and udeb) in Makefile   vars and share the common flags. * Only pass --host to configure if DEB_HOST_GNU_TYPE and DEB_BUILD_GNU_TYPE   differ.

--- a/debian/rules
+++ b/debian/rules
@@ -44,6 +44,38 @@ shver=2.10.0
 libpath=$(CURDIR)/$(BUILD_SHARED_DIR)/gdk-pixbuf/.libs:$(CURDIR)/$(BUILD_SHARED_DIR)/gdk/.libs:$(CURDIR)/$(BUILD_SHARED_DIR)/gtk/.libs
 libpath_dfb=$(CURDIR)/$(BUILD_DFB_DIR)/gdk-pixbuf/.libs:$(CURDIR)/$(BUILD_DFB_DIR)/gdk/.libs:$(CURDIR)/$(BUILD_DFB_DIR)/gtk/.libs
 
+# configure flags
+common_configure_flags = \
+			--host=$(DEB_HOST_GNU_TYPE) \
+			--build=$(DEB_BUILD_GNU_TYPE) \
+			--prefix=/usr \
+			--mandir=\$${prefix}/share/man \
+			--infodir=\$${prefix}/share/info \
+			--sysconfdir=/etc \
+			--with-html-dir=\$${prefix}/share/doc/$(DOC_PKG) \
+			--enable-explicit-deps=yes
+ifeq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
+	common_configure_flags += --build=$(DEB_BUILD_GNU_TYPE)
+else
+	common_configure_flags += --build $(DEB_BUILD_GNU_TYPE) --host $(DEB_HOST_GNU_TYPE)
+endif
+shared_configure_flags = $(common_configure_flags) \
+			--with-xinput=yes \
+			--enable-shared \
+			--disable-static \
+static_configure_flags = $(common_configure_flags) \
+			--with-xinput=yes \
+			--with-included-loaders=yes \
+			--disable-modules \
+			--disable-shared \
+			--enable-static \
+dfb_configure_flags = $(common_configure_flags) \
+			--with-xinput=no \
+			--enable-shared \
+			--disable-static \
+			--with-gdktarget=directfb \
+			--with-cairo-backend=directfb \
+
 SHARED_PKG=libgtk$(apiver)-$(soname)$(suffix)
 SHARED_PKGDIR=$(CURDIR)/debian/$(SHARED_PKG)
 DEV_PKG=libgtk$(apiver)-dev
@@ -90,17 +122,7 @@ $(STAMP_DIR)/configure-shared-stamp:
 
 	# Add here commands to configure the package.
 	cd $(BUILD_SHARED_DIR) && \
-	./configure	--host=$(DEB_HOST_GNU_TYPE) \
-			--build=$(DEB_BUILD_GNU_TYPE) \
-			--prefix=/usr \
-			--mandir=\$${prefix}/share/man \
-			--infodir=\$${prefix}/share/info \
-			--sysconfdir=/etc \
-			--with-html-dir=\$${prefix}/share/doc/$(DOC_PKG) \
-			--with-xinput=yes \
-			--enable-shared \
-			--disable-static \
-			--enable-explicit-deps=yes
+		./configure $(shared_configure_flags)
 
 	cd $(BUILD_SHARED_DIR) && \
 	sed < libtool > libtool-2 \
@@ -118,18 +140,7 @@ $(STAMP_DIR)/configure-static-stamp:
 
 	# Add here commands to configure the package.
 	cd $(BUILD_STATIC_DIR) && \
-	./configure	--host=$(DEB_HOST_GNU_TYPE) \
-			--build=$(DEB_BUILD_GNU_TYPE) \
-			--prefix=/usr \
-			--mandir=\$${prefix}/share/man \
-			--infodir=\$${prefix}/share/info \
-			--sysconfdir=/etc \
-			--with-xinput=yes \
-			--with-included-loaders=yes \
-			--disable-modules \
-			--disable-shared \
-			--enable-static \
-			--enable-explicit-deps=yes
+		./configure $(static_configure_flags)
 
 	cd $(BUILD_STATIC_DIR) && \
 	sed < libtool > libtool-2 \
@@ -147,19 +158,7 @@ $(STAMP_DIR)/configure-dfb-stamp:
 
 	# Add here commands to configure the package.
 	cd $(BUILD_DFB_DIR) && \
-	./configure	--host=$(DEB_HOST_GNU_TYPE) \
-			--build=$(DEB_BUILD_GNU_TYPE) \
-			--prefix=/usr \
-			--mandir=\$${prefix}/share/man \
-			--infodir=\$${prefix}/share/info \
-			--sysconfdir=/etc \
-			--with-html-dir=\$${prefix}/share/doc/$(DOC_PKG) \
-			--with-xinput=no \
-			--enable-shared \
-			--disable-static \
-			--with-gdktarget=directfb \
-			--with-cairo-backend=directfb \
-			--enable-explicit-deps=yes
+		./configure $(dfb_configure_flags)
 
 	cd $(BUILD_DFB_DIR) && \
 	sed < libtool > libtool-2 \
