--- a/debian/rules
+++ b/debian/rules
@@ -41,6 +41,8 @@ glibver=2.0
 atkver=1.0
 pangover=1.0
 shver=2.10.0
+# earliest version that this release has backwards binary compatibility for
+GTK_BINARY_VERSION=2.10.0
 libpath=$(CURDIR)/$(BUILD_SHARED_DIR)/gdk-pixbuf/.libs:$(CURDIR)/$(BUILD_SHARED_DIR)/gdk/.libs:$(CURDIR)/$(BUILD_SHARED_DIR)/gtk/.libs
 libpath_dfb=$(CURDIR)/$(BUILD_DFB_DIR)/gdk-pixbuf/.libs:$(CURDIR)/$(BUILD_DFB_DIR)/gdk/.libs:$(CURDIR)/$(BUILD_DFB_DIR)/gtk/.libs
 
@@ -233,6 +235,10 @@ $(STAMP_DIR)/install-test-stamp:
 install-shared: build-shared install-test
 	# Add here commands to install the package into debian/tmp
 	$(MAKE) -C $(BUILD_SHARED_DIR) install DESTDIR=$(SHARED_PKGDIR)
+	for d in engines loaders immodules printbackends; do \
+	    rm $(SHARED_PKGDIR)/usr/lib/gtk-$(apiver)/$(GTK_BINARY_VERSION)/$$d/*.a \
+	    rm $(SHARED_PKGDIR)/usr/lib/gtk-$(apiver)/$(GTK_BINARY_VERSION)/$$d/*.la \
+	done
 
 install-static: build-static install-test
 	# Add here commands to install the package into debian/tmp
