* Rewrite and cleanup the build process completely. * Install the full set of pkg-config files from the dfb flavor in   /usr/lib/pkgconfig/libgtk-directfb-2.0; to use this feature, set   PKG_CONFIG_PATH while invoking pkg-config (or configure); the   /usr/lib/pkgconfig/*directfb*.pc files will be removed when Debian sources   have been converted. * In the same spirit, gdkconfig.h is in /usr/lib/gtk-2.0/include/directfb;   to use it, prepend -I/usr/lib/gtk-2.0/include/directfb to CFLAGS. * Fix generation of /etc/gtk-2.0/gdk-pixbuf.loaders for the udeb.   (Closes: #382435) * Build-depend on libcairo-directfb2-dev >= 1.2.4-2 to get PDF/PS support in   the directfb flavor of libcairo. * Recommend the linked source packages in libgtk2.0-doc instead of simply   suggesting them. * Rewrite update-gdkpixbuf-loaders and update-gtk-immodules. * Drop double libatk1.0-dev build-dep.

--- a/debian/update-gtk-immodules.in
+++ b/debian/update-gtk-immodules.in
@@ -1,32 +1,28 @@
-#! /bin/sh
+#!/bin/sh
 
 set -e
 
-TMPFILE=`mktemp /tmp/gtk+-@VERSION@.XXXXXXXXXX`
-apiver=@APIVER@
-defaultver=@MODVER@
+VERSION="@VERSION@"
+GTK_BINARY_VERSION="@GTK_BINARY_VERSION@"
+APIVER="@APIVER@"
+SHARED_PKG="@SHARED_PKG@"
+TMPFILE=$(mktemp -t "gtk+$APIVER-$VERSION.XXXXXXXXXX")
 
-VERSION=@GTK_BINARY_VERSION@
-if ! test -d /usr/lib/gtk-$apiver/$VERSION/immodules; then
-	echo "You don't have immodules directory for version $VERSION."
-	echo "Use default version instead."
-	VERSION=$defaultver
-fi
-
-echo -n "Updating the IM modules list for GTK+-$VERSION..."
-/usr/lib/libgtk2.0-0/gtk-query-immodules-$apiver `find /usr/lib/gtk-$apiver/$VERSION/immodules -name '*.so'` > $TMPFILE
-if [ "x`cat $TMPFILE | grep -v '^#'`" = "x" ]; then
-	echo "the GTK+ IM modules was not found."
+echo -n "Updating the IM modules list for Gtk+ $VERSION..."
+"/usr/lib/$SHARED_PKG/gtk-query-immodules-$APIVER" \
+    $(find "/usr/lib/gtk-$APIVER/$GTK_BINARY_VERSION/immodules" -name '*.so') \
+    > "$TMPFILE"
+if [ "x`cat "$TMPFILE" | grep -v '^#'`" = "x" ]; then
+    echo "no Gtk+ IM modules found."
 else
-	echo "done."
+    echo "done."
 fi
-if ! test -d /etc/gtk-$apiver; then
-	echo -n "Creating /etc/gtk-$apiver..."
-	mkdir /etc/gtk-$apiver
-	echo "done."
+if ! test -d "/etc/gtk-$APIVER"; then
+    echo -n "Creating /etc/gtk-$APIVER..."
+    mkdir "/etc/gtk-$APIVER"
+    echo "done."
 fi
-cp $TMPFILE /etc/gtk-$apiver/gtk.immodules
-chmod 644 /etc/gtk-$apiver/gtk.immodules
+cp "$TMPFILE" "/etc/gtk-$APIVER/gtk.immodules"
+chmod 644 "/etc/gtk-$APIVER/gtk.immodules"
 
-rm -f $TMPFILE
-
+rm -f "$TMPFILE"
