--- a/debian/docs.in
+++ b/debian/docs.in
@@ -1,12 +1,4 @@
-build-tree/gtk+-@VERSION@/NEWS
-build-tree/gtk+-@VERSION@/NEWS.pre-1-0
-build-tree/gtk+-@VERSION@/README
-build-tree/gtk+-@VERSION@/ChangeLog.gtk-async-file-chooser
-build-tree/gtk+-@VERSION@/ChangeLog.gtk-printing
-build-tree/gtk+-@VERSION@/ChangeLog.pre-1-0
-build-tree/gtk+-@VERSION@/ChangeLog.pre-1-2
-build-tree/gtk+-@VERSION@/ChangeLog.pre-2-0
-build-tree/gtk+-@VERSION@/ChangeLog.pre-2-2
-build-tree/gtk+-@VERSION@/ChangeLog.pre-2-4
-build-tree/gtk+-@VERSION@/ChangeLog.pre-2-6
-build-tree/gtk+-@VERSION@/ChangeLog.pre-2-8
+# from the source
+@TOP_SRC_DIR@/NEWS
+@TOP_SRC_DIR@/NEWS.pre-1-0
+@TOP_SRC_DIR@/README
