--- a/debian/libgtk2.0-doc.doc-base.gtk.in
+++ b/debian/libgtk2.0-doc.doc-base.gtk.in
@@ -7,5 +7,5 @@ Abstract: The GTK+ library provides a graphical user interface for
 Section: Apps/Programming
 
 Format: HTML
-Index: /usr/share/doc/libgtk2.0-doc/gtk/index.html
-Files: /usr/share/doc/libgtk2.0-doc/gtk/*.html
+Index: /usr/share/doc/@DOC_PKG@/gtk/index.html
+Files: /usr/share/doc/@DOC_PKG@/gtk/*.html
