* New immodule files handling with *.immodules files below   /usr/lib/gtk-2.0/<BINARY_VERSION>/immodule-files.d.   - New patch, 020_immodules-files-d, to split the module search path on     ":", as is done in Pango, prepend     /usr/lib/gtk-2.0/<BINARY_VERSION>/immodule-files.d to the search path,     and to read all *.immodules files when a directory is encountered in the     search path.   - Pre-generate     /usr/lib/gtk-2.0/<BINARY_VERSION>/immodule-files.d/libgtk2.0-0.immodules     for the shared library.   - Continue generating /etc/gtk-2.0/gtk.immodules until packages are     updated.

--- a/debian/rules
+++ b/debian/rules
@@ -76,6 +76,9 @@ installbasedir = $(CURDIR)/debian/tmp/install
 # relative base directory for all types of modules
 MODULES_BASE_PATH := usr/lib/gtk-$(APIVER)/$(GTK_BINARY_VERSION)
 
+# relative directory to store the generated IM modules file
+IMMODULE_FILES_D := $(MODULES_BASE_PATH)/immodule-files.d
+
 # configure flags
 common_configure_flags := \
 			--prefix=/usr \
@@ -211,6 +214,13 @@ binary-arch: build install $(call dh_subst_files,$(BINARY_ARCH_PKGS)) debian/upd
 	done
 	dh_installchangelogs -p$(EXAMPLES_PKG) -p$(PIXBUF_PKG) $(TOP_SRC_DIR)/ChangeLog $(TOP_SRC_DIR)/ChangeLog.*
 	dh_installdocs -p$(EXAMPLES_PKG) -p$(PIXBUF_PKG)
+	# generate an IM module file for the shared library
+	install -d debian/$(SHARED_PKG)/$(IMMODULE_FILES_D)
+	LD_LIBRARY_PATH=debian/$(SHARED_PKG)/usr/lib:$(LD_LIBRARY_PATH) \
+		debian/tmp/install/shared/usr/bin/gtk-query-immodules-2.0 \
+			debian/$(SHARED_PKG)/$(MODULES_BASE_PATH)/immodules/*.so | \
+			sed 's#$(CURDIR)/debian/$(SHARED_PKG)##' \
+				> debian/$(SHARED_PKG)/$(IMMODULE_FILES_D)/$(SHARED_PKG).immodules
 	# generate a GdkPixbuf loader config file for the udeb
 	install -d debian/$(UDEB_PKG)/etc/gtk-$(APIVER)
 	LD_LIBRARY_PATH=debian/$(UDEB_PKG)/usr/lib:$(LD_LIBRARY_PATH) \
