* Add the libpixmap engine to the udeb for the new Bladr GTK theme for g-i.

--- a/debian/libgtk-directfb-2.0-0-udeb.install.in
+++ b/debian/libgtk-directfb-2.0-0-udeb.install.in
@@ -1,3 +1,4 @@
 # from the directfb flavor
+debian/tmp/install/directfb/@MODULES_BASE_PATH@/engines/libpixmap.so @MODULES_BASE_PATH@/engines
 debian/tmp/install/directfb/@MODULES_BASE_PATH@/loaders/libpixbufloader-png.so @MODULES_BASE_PATH@/loaders
 debian/tmp/install/directfb/usr/lib/*.so.* usr/lib
