* New Debhelper-based command, dh_gtkmodules, to create module files for IM   modules and GdkPixbuf loaders; it will still add a dependency on the   binary version of Gtk for other modules.

--- a/debian/libgtk2.0-dev.install.in
+++ b/debian/libgtk2.0-dev.install.in
@@ -1,3 +1,5 @@
+# from Debian
+debian/dh_gtkmodules usr/bin
 # from the shared flavor
 debian/tmp/install/shared/usr/bin/gdk-pixbuf-csource usr/bin
 debian/tmp/install/shared/usr/include usr
