--- a/debian/control.in
+++ b/debian/control.in
@@ -12,7 +12,7 @@ Section: libs
 Architecture: any
 Depends: @COMMON_PKG@ (= ${source:Version}), ${shlibs:Depends}
 Provides: @GTK_BINVER_DEP@
-Conflicts: libgtk2.0-0png3, eog2 (<< 1.0.1-4), gnome-panel2 (<< 2.0.4-1), celestia (<< 1.2.4-4), gimp1.3 (<< 1.3.7-1.1), metatheme (<< 0.9.7-3), libgnomeui-0 (<< 2.0.6-2), gtk2.0-examples (<< 2.2.0), libgdkxft0, gtk2-engines-wonderland (<= 1.0-2), gtk2-engines-cleanice (<= 1.2.8-1), gtk2-engines-thinice (<< 2.6), gtk2-engines-crux (<< 2.6), gtk2-engines-mist (<< 2.6), gtk2-engines-highcontrast (<< 2.6), gtk2-engines-lighthouseblue (<< 2.6), gnome-themes (<< 2.6), gtk2-engines-industrial (<< 0.2.32-5), gtk2-engines-pixbuf (<< 2.2.0-2.1), gtk2-engines-redmond95 (<< 2.2.0-2.1), gtk2-engines-metal (<< 2.2.0-2.1), gtk2-engines-magicchicken (<= 1.1.1-4), gtk2-engines-qtpixmap (<= 0.28-1), gtk2-engines-smooth (<< 0.5.6-3), gtk2-engines-xfce (<= 2.1.8-1), tamil-gtk2im (<= 2.2-4), imhangul (<< 0.9.9-3), librsvg2-common (<< 2.6.3-1)
+Conflicts: libgtk2.0-0png3, eog2 (<< 1.0.1-4), gnome-panel2 (<< 2.0.4-1), celestia (<< 1.2.4-4), gimp1.3 (<< 1.3.7-1.1), metatheme (<< 0.9.7-3), libgnomeui-0 (<= 2.14.1-2), gtk2.0-examples (<< 2.2.0), libgdkxft0, gtk2-engines-wonderland (<= 1.0-3), gtk2-engines-cleanice (<= 1.2.8-1), gtk2-engines-thinice (<< 2.6), gtk2-engines-crux (<< 2.6), gtk2-engines-mist (<< 2.6), gtk2-engines-highcontrast (<< 2.6), gtk2-engines-lighthouseblue (<< 2.6), gnome-themes (<< 2.6), gtk2-engines-industrial (<< 0.2.32-5), gtk2-engines-pixbuf (<< 2.8.20-1), gtk2-engines-redmond95 (<< 2.2.0-2.1), gtk2-engines-metal (<< 2.2.0-2.1), gtk2-engines-magicchicken (<= 1.1.1-7), gtk2-engines-qtpixmap (<= 0.28-1.1), gtk2-engines-smooth (<< 0.5.6-3), gtk2-engines-xfce (<= 2.3.90.2-1), tamil-gtk2im (<= 2.2-4.2), imhangul (<= 0.9.13-3), librsvg2-common (<= 2.14.4-2), gtk2-engines (<= 1:2.6.10-2), gtk2-engines-gtk-qt (<= 1:0.7-1), iiimgcf (<= 11.4.1870-7.3), scim-bridge (<= 0.2.4-1), scim-gtk2-immodule (<= 1.4.4-4), gtk-im-libthai (<= 0.1.4-1), uim-gtk2.0 (<= 1:1.2.1-3), libwmf-dev (<= 0.2.8.4-2), libwmf0.2-7 (<= 0.2.8.4-2), swf-player (<= 0.3.6-2.1)
 Replaces: libgtk2.0-0png3
 Recommends: hicolor-icon-theme, @BIN_PKG@
 Description: The GTK+ graphical user interface library
@@ -169,7 +169,7 @@ Package: @PIXBUF_PKG@
 Section: graphics
 Priority: optional
 Architecture: any
-Depends: ${shlibs:Depends}, @SHARED_PKG@ (= ${binary:Version})
+Depends: ${misc:Depends}, ${shlibs:Depends}, @SHARED_PKG@ (= ${binary:Version})
 Suggests: gtk-engines-pixmap
 Conflicts: gtk2.0-engines-pixbuf
 Replaces: gtk2.0-engines-pixbuf
