* Fix typo (DFB_PKGFIR versus DFB_PKGDIR), use the BUILD_DFB_DIR version of   gdk-pixbuf-query-loaders, and set LD_LIBRARY_PATH to the udeb's /usr/lib;   should fix the empty /etc/gtk-2.0/gdk-pixbuf.loaders. (Closes: #382435)

--- a/debian/rules
+++ b/debian/rules
@@ -243,9 +243,10 @@ install-dfb: build-dfb install-test
 	find $(DFB_PKGDIR) -name \*.la -exec rm -f \{\} \;
 	find $(DFB_PKGDIR) -name libpixbufloader\* \! -name \*png\* -exec rm -f \{\} \;
 	mkdir -p $(UDEB_PKGDIR)/etc/gtk-2.0
-	$(BUILD_SHARED_DIR)/gdk-pixbuf/gdk-pixbuf-query-loaders \
-		$(DFB_PKGFIR)/usr/lib/gtk-2.0/*/loaders/*.so | \
-		sed s,$(DFB_PKGDIR),, > $(UDEB_PKGDIR)/etc/gtk-2.0/gdk-pixbuf.loaders
+	LD_LIBRARY_PATH=debian/$(SHARED_PKG)/usr/lib:$(LD_LIBRARY_PATH) \
+		$(BUILD_DFB_DIR)/gdk-pixbuf/gdk-pixbuf-query-loaders \
+			$(DFB_PKGDIR)/usr/lib/gtk-2.0/*/loaders/*.so | \
+			sed s,$(DFB_PKGDIR),, > $(UDEB_PKGDIR)/etc/gtk-2.0/gdk-pixbuf.loaders
 
 install: install-static install-shared install-dfb
 	# generating debian files from .in
