* Ship all engines of the DirectFB build in the udeb, that is   engines/libpixmap.so.

--- a/debian/rules
+++ b/debian/rules
@@ -242,6 +242,7 @@ install-dfb: build-dfb install-test
 	$(MAKE) -C $(BUILD_DFB_DIR) install DESTDIR=$(DFB_PKGDIR)
 	find $(DFB_PKGDIR) -name \*.la -exec rm -f \{\} \;
 	find $(DFB_PKGDIR) -name libpixbufloader\* \! -name \*png\* -exec rm -f \{\} \;
+	find $(DFB_PKGDIR) -name libpixbufloader\* \! -name \*png\* -exec rm -f \{\} \;
 	mkdir -p $(UDEB_PKGDIR)/etc/gtk-2.0
 	LD_LIBRARY_PATH=debian/$(SHARED_PKG)/usr/lib:$(LD_LIBRARY_PATH) \
 		$(BUILD_DFB_DIR)/gdk-pixbuf/gdk-pixbuf-query-loaders \
@@ -261,7 +262,7 @@ install: install-static install-shared install-dfb
 	chrpath -d $(UDEB_PKGDIR)/usr/lib/*.so.?
 	cp -r $(DFB_PKGDIR)/usr/lib/gtk-2.0/[0-9]* \
 		$(UDEB_PKGDIR)/usr/lib/gtk-2.0/
-	rm -rf $(UDEB_PKGDIR)/usr/lib/gtk-2.0/*/{engines,immodules}
+	rm -rf $(UDEB_PKGDIR)/usr/lib/gtk-2.0/*/immodules
 
 	# remove files that are already here in the other build
 	cd $(SHARED_PKGDIR) && \
